# Formats

./: README.md  hello.cpp  qbinary.cpp  qbinary.h  qbinary.pri  qelf.cpp  qelf.h  qelf.pri  qelf_def.h  qmach.cpp  qmach.h  qmach.pri  qmach_def.h  qmsdos.cpp  qmsdos.h  qmsdos.pri  qmsdos_def.h  qpe.cpp  qpe.h  qpe.pri  qpe_def.h  scanitem.cmake  scanitem.cpp  scanitem.h  scanitem.pri  scanitemmodel.cpp  scanitemmodel.h  subdevice.cpp  subdevice.h  xbinary.cmake  xbinary.cpp  xbinary.h  xbinary.pri  xbinary_def.h  xcom.cpp  xcom.h  xcom_def.h  xdataconvertor.cmake  xdataconvertor.cpp  xdataconvertor.h  (+54 more)
audio/: xmp3.cpp  xmp3.h  xwav.cpp  xwav.h  xxm.cpp  xxm.h
example/: example_class.cpp  example_class.h
exec/: xamigahunk.cpp  xamigahunk.h  xamigahunk.pri  xamigahunk_def.h  xatarist.cpp  xatarist.h  xatarist_def.h  xcliassembly.cmake  xcliassembly.cpp  xcliassembly.h  xcliassembly.pri  xcliassembly_def.h  xcom.cpp  xcom.h  xcom_def.h  xelf.cpp  xelf.h  xelf_def.h  xle.cpp  xle.h  xle_def.h  xmach.cpp  xmach.h  xmach_def.h  xmsdos.cpp  xmsdos.h  xmsdos_def.h  xne.cpp  xne.h  xne_def.h  xpe.cpp  xpe.h  xpe.pri  xpe_def.h
formats/: xcfbf.cpp  xcfbf.h  xcfbf.pri  xder.cpp  xder.h  xdjvu.cpp  xdjvu.h  xjavaclass.cpp  xjavaclass.h  xpyc.cpp  xpyc.h  xriff.cpp  xriff.h  xttf.cpp  xttf.h
images/: xbmp.cpp  xbmp.h  xgif.cpp  xgif.h  xicc.cpp  xicc.h  xicon.cpp  xicon.h  xjpeg.cpp  xjpeg.h  xpng.cpp  xpng.h  xtiff.cpp  xtiff.h  xwebp.cpp  xwebp.h
spec/: specabstract.cpp  specabstract.h  specabstract.pri
texts/: xtext.cpp  xtext.h
video/: xavi.cpp  xavi.h  xmp4.cpp  xmp4.h  xriff.cpp  xriff.h
xsimd/: AVX_SUPPORT_UPDATE.md  AVX_vs_AVX2.md  CMakeLists.txt  INTEGRATION_GUIDE.md  NEW_FUNCTIONS_DOCUMENTATION.md  README.md  SIMD_REORGANIZATION.md  SUMMARY.md  xsimd.pri  xsimd.pro
xsimd/src/: LICENSE  xsimd.c  xsimd.h  xsimd_avx2.c  xsimd_avx2.h  xsimd_cuda.cu  xsimd_cuda.h  xsimd_sse.h  xsimd_sse2.c  xsimd_sse2.h
xsimd/tests/: CMakeLists.txt  test_new_functions.c  test_simd_paths.c
xsimd/xsimd/: xsimd.pro
xsimd/xsimd_sse2/: xsimd_sse2.pro
